--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,31 @@
 [versions]
-agp = "8.5.2"
-kotlin = "1.9.0"
-coreKtx = "1.13.1"
+agp = "8.13.1"
+kotlin = "2.2.21"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-kotlinStdlibJdk7 = "2.0.20"
-kotlinxCoroutinesAndroid = "1.9.0"
-kotlinxCoroutinesCore = "1.9.0"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+kotlinStdlibJdk7 = "2.2.21"
+kotlinxCoroutinesAndroid = "1.10.2"
+kotlinxCoroutinesCore = "1.10.2"
 lifecycleExtensions = "2.2.0"
-lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-appcompat = "1.7.0"
-material = "1.12.0"
+lifecycleRuntimeKtx = "2.10.0"
+activityCompose = "1.12.0"
+appcompat = "1.7.1"
+material = "1.13.0"
+
+#coreKtx = "1.13.1"
+#junit = "4.13.2"
+#junitVersion = "1.2.1"
+#espressoCore = "3.6.1"
+#kotlinStdlibJdk7 = "2.0.20"
+#kotlinxCoroutinesAndroid = "1.9.0"
+#kotlinxCoroutinesCore = "1.9.0"
+#lifecycleExtensions = "2.2.0"
+#lifecycleRuntimeKtx = "2.8.7"
+#activityCompose = "1.9.3"
+#appcompat = "1.7.0"
+#material = "1.12.0"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityCompose" }
